hobbies added and routes corrected
